<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navigation_chats"
        android:icon="@drawable/chat_icon"
        android:title="@string/title_chats" />

    <item
        android:id="@+id/navigation_mis_eventos"
        android:icon="@drawable/mis_eventos_icon"
        android:title="@string/title_mis_eventos" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_equipos"
        android:icon="@drawable/equipo_icon"
        android:title="@string/title_equipos" />

    <item
        android:id="@+id/navigation_herramientas"
        android:icon="@drawable/silbato_icon"
        android:title="@string/title_herramientas" />

</menu>